linole/apps/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: linole
spec:
  type: LoadBalancer
  selector:
    app: homeassistant
  ports:
    - port: 6102
      targetPort: 8123
      name: http
  loadBalancerIP: 192.168.0.201
